# hpack

./: .coveragerc  .gitignore  .mergify.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTORS.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  SECURITY.md  pyproject.toml  setup.cfg  setup.py  tasks.py  test_requirements.txt  tox.ini
.github/workflows/: ci.yml
.travis/: install.sh  run.sh
bench/: test_hpack.py
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  index.rst  installation.rst  logging.rst
docs/source/security/: CVE-2016-6581.rst
hpack/: HeaderTable.py  __init__.py  compat.py  exceptions.py  hpack.py  huffman.py  huffman_constants.py  table.py
src/hpack/: __init__.pxd  __init__.py  _exceptions.pyx  _table.pyi  _table.pyx  c_exceptions.pxd  c_exceptions.pyi  c_huffman.pxd  c_huffman.pyx  c_table.pxd  c_table.pyi  c_table.pyx  exceptions.py  hpack.py  huffman.py  huffman_constants.h  huffman_constants.py  huffman_table.h  huffman_table.py  py_exceptions.py  struct.py  table.py
test/: conftest.py  test_encode_decode.py  test_hpack.py  test_hpack_integration.py  test_huffman.py  test_hyper.py  test_table.py
tests/: conftest.py  test_encode_decode.py  test_hpack.py  test_huffman.py  test_huffman_benchmark.py  test_struct.py  test_table.py
utils/: create_test_output.py
