[metadata]
name = hpack
author = Cory Benfield
author_email = cory@lukasa.co.uk
license = MIT License
description = Pure-Python HPACK header compression
url = https://github.com/python-hyper/hpack
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
include_package_data = True
python_requires = >=3.6.1
package_dir =
    = src

[options.package_data]
hpack = 
    CHANGELOG.rst

[options.packages.find]
where = src

[tool:pytest]
testpaths = test

[coverage:run]
branch = True
source = hpack

[coverage:report]
fail_under = 100
show_missing = True
exclude_lines =
    pragma: no cover

[coverage:paths]
source =
    src
    .tox/*/site-packages

[flake8]
max-complexity = 10
exclude =
    hpack/huffman_constants.py
